<resources>
    <string name="app_name">Foodel</string>
    <string name="buttonText">Красавчик, все работает</string>
    <string name="chedi">Chedi</string>
    <string name="kolmSibulat">Kolm Sibulat</string>
    <string name="restoran1">CHEDI</string>
    <string name="restoran2">KOLM SIBULAT</string>
    <string name="restoran3">KAKS KOKKA</string>
    <string name="restoran4">MOON</string>
    <string name="restoran5">TRÜHVEL</string>
    <string name="starters">Starters</string>
    <string name="dim_sum_i_valik_kreveti_kammkarbi_ja_kreveti_bambuse_t_idisega_12">Dim Sum´i valik kreveti-kammkarbi ja kreveti-bambuse täidisega 12€</string>
    <string name="dim_sum_i_valik_seene_ja_k_giviljat_idisega_10">Dim Sum`i valik seene- ja köögiviljatäidisega 10€</string>
    <string name="taip_rane_salat_v_rske_tuunikalaga_18">Taipärane salat värske tuunikalaga 18€</string>
    <string name="praetud_sinikrabid_punase_chilli_ja_karrilehtedega_15">Praetud sinikrabid punase chilli ja karrilehtedega 15€</string>
    <string name="rnalt_frititud_kalmaar_chilli_ja_karrilehtedega">Õrnalt frititud kalmaar chilli ja karrilehtedega 14€</string>
    <string name="kr_bedad_wasabi_krevetid_kreeka_p_hklitega">Krõbedad wasabi krevetid Kreeka pähklitega 13€</string>
    <string name="k_psetatud_hirveliha_dim_sum_id_12">Küpsetatud hirveliha Dim Sum\'id 12€</string>
    <string name="kr_be_pardilihasalat_pomeli_seederm_nniseemnete_ja_shalottsibulaga_17">Krõbe pardilihasalat pomeli, seedermänniseemnete ja shalottsibulaga 17€</string>
    <string name="jasmiiniteega_suitsutatud_searibi_13">Jasmiiniteega suitsutatud searibi 13€</string>
    <string name="t_iili_meriahvena_supp_13">Tšiili meriahvena supp 13€</string>
    <string name="main_course">Main Course</string>
    <string name="r_stitud_silver_cod_ampanja_ja_hiina_meega_30">Röstitud Silver Cod šampanja ja Hiina meega 30€</string>
    <string name="taiwani_stiilis_koha_sanpei_kastmes_24">Taiwani stiilis koha sanpei kastmes 24€</string>
    <string name="grillitud_l_he_peakoka_kastmega_16">Grillitud lõhe Peakoka kastmega 16€</string>
    <string name="grillitud_t_iili_mereahven_hiina_meega_32">Grillitud Tšiili mereahven Hiina meega 32€</string>
    <string name="pi_pa_part_20">Pi Pa part 20€</string>
    <string name="veiseliha_stir_fry_musta_pipra_ja_merlot_ga_24">Veiseliha stir-fry musta pipra ja Merlot’ga 24€</string>
    <string name="mongoolia_stiilis_stir_fry_hirveliha_25">Mongoolia stiilis stir-fry hirveliha 25€</string>
    <string name="vesikastani_suhkruherne_ja_musta_seene_stir_fry_13">Vesikastani, suhkruherne ja musta seene stir-fry 13€</string>
    <string name="beebibrokoli_stir_fry_hiina_oliividega_13">Beebibrokoli stir-fry Hiina oliividega 13€</string>
    <string name="vokitud_t_rgi_oad_kr_bedate_krevettidega_teravas_oakastmes_13">Vokitud Türgi oad krõbedate krevettidega teravas oakastmes 13€</string>
    <string name="taimetoitlaste_kana_stir_fry_musta_pipraga_12">Taimetoitlaste kana stir-fry musta pipraga 12€</string>
    <string name="lootosjuure_ja_spargli_stir_fry_musta_pipraga_13">Lootosjuure ja spargli stir-fry musta pipraga 13€</string>
    <string name="broccolini_seesami_li_ja_sojakastmega_ning_granaat_una_ja_hummusega_7">Broccolini seesamiõli ja sojakastmega ning granaatõuna ja hummusega 7€</string>
    <string name="ahjus_r_stitud_kitsejuust_rukkileival_peedipesto_ning_rukolaga_9">Ahjus röstitud kitsejuust rukkileival, peedipesto ning rukolaga 9€</string>
    <string name="maapirn_kolmel_erineval_moel_praetud_p_reena_ja_kr_psudena_8">Maapirn kolmel erineval moel: praetud, püreena ja krõpsudena 8€</string>
    <string name="aasiap_rane_l_he_tartar_valge_redise_ja_mangokastmega_9">Aasiapärane lõhe tartar valge redise ja mangokastmega 9€</string>
    <string name="soe_kaheksajalg_mooritud_tomatite_rooma_salati_ning_kartuli_safrani_aioliga_12">Soe kaheksajalg mooritud tomatite, rooma salati ning kartuli-safrani aioliga 12€</string>
    <string name="jahutatud_veise_carpaccio_parmesani_juustu_ja_tr_hvlikastmega_11">Jahutatud veise carpaccio parmesani juustu ja trühvlikastmega 11€</string>
    <string name="kanapuljong_nuudlite_uputatud_muna_ja_rohelise_sibulaga_5">Kanapuljong nuudlite, uputatud muna ja rohelise sibulaga 5€</string>
    <string name="punaste_l_tsete_supp_erinevate_kaladega_ning_krevettide_sidrunheina_ja_kookospiimaga_7">Punaste läätsete supp erinevate kaladega ning krevettide, sidrunheina ja kookospiimaga 7€</string>
    <string name="soe_gruusia_lavash_peedipesto_hummuse_ja_kitsejuustuga_8">Soe Gruusia lavash peedipesto, hummuse ja kitsejuustuga 8€</string>
    <string name="mee_ja_sojaga_r_stitud_p_rsaribid_kimchi_kapsaga_9">Mee ja sojaga röstitud põrsaribid kimchi kapsaga 9€</string>
    <string name="desserts">Desserts</string>
    <string name="grenadillijogurt_chiboust_mangosorbetiga_7">Grenadillijogurt-Chiboust mangosorbetiga 7€</string>
    <string name="okolaadi_halvaakook_mustas_straj_tisega_7">Šokolaadi-halvaakook mustasõstrajäätisega 7€</string>
    <string name="puuvilja_marjadessert_ampanjaga_9">Puuvilja-marjadessert šampanjaga 9€</string>
    <string name="j_tise_sorbeti_valik_6">Jäätise sorbeti valik 6€</string>
    <string name="kolm_sibulat">Kolm Sibulat</string>
    <string name="veisefilee_shiitake_seente_v_rtsika_bakla_aani_ja_teriyaki_kr_psuga_19">Veisefilee shiitake seente, vürtsika baklažaani ja teriyaki krõpsuga 19€</string>
    <string name="k_psetatud_pardifilee_mustjuure_br_sseli_kapsa_ning_kirsikreemiga_14">Küpsetatud pardifilee mustjuure, brüsseli kapsa ning kirsikreemiga 14€</string>
    <string name="kana_nitsel_peterselli_ja_k_slauguv_iga_p_rlkuskussi_ning_magusa_hernep_reega_12">Kanasnitsel peterselli- ja küüslauguvõiga, pärlkuskussi ning magusa hernepüreega 12€</string>
    <string name="kergelt_p_letatud_siig_spinati_porrulaugu_ning_estragoni_v_ikastmega_17">Kergelt põletatud siig spinati, porrulaugu ning estragoni-võikastmega 17€</string>
    <string name="jaapanip_rane_angers_ga_suitsuse_kartulip_ree_dijon_sinepi_ja_porgandikastmega_15">Jaapanipärane angersäga suitsuse kartulipüree, Dijon sinepi ja porgandikastmega 15€</string>
    <string name="veisefilee_kanapuljong_uputatud_muna_marineeritud_aedviljad_t_illimoos_ja_maitseroheline_10">Veisefilee, kanapuljong, uputatud muna, marineeritud aedviljad, tšillimoos ja maitseroheline 10€</string>
    <string name="mahlane_p_rsak_lg_kanapuljong_uputatud_muna_marineeritud_aedviljad_ja_maitseroheline_10">Mahlane põrsakülg, kanapuljong, uputatud muna, marineeritud aedviljad ja maitseroheline 10€</string>
    <string name="pardi_confit_kanapuljong_uputatud_muna_marineeritud_aedviljad_ja_maitseroheline_10">Pardi confit, kanapuljong, uputatud muna, marineeritud aedviljad ja maitseroheline 10€</string>
    <string name="soolakrevetid_kanapuljong_uputatud_muna_v_rske_kurk_ja_maitseroheline_10">Soolakrevetid, kanapuljong, uputatud muna, värske kurk ja maitseroheline 10€</string>
    <string name="v_rtsikas_bakla_aan_aedviljapuljong_t_illimoos_korea_porgand_ja_maitseroheline_10">Vürtsikas baklazaan, aedviljapuljong, tšillimoos, Korea porgand ja maitseroheline 10€</string>
    <string name="truhvel">Trühvel</string>
    <string name="moon">Moon</string>
    <string name="kaks_kokka">Kaks Kokka</string>
    <string name="sparglisalat_100_minuti_pardimuna_hollandi_kaste_kr_be_seanahk_9">Sparglisalat - 100 minuti pardimuna, Hollandi kaste, krõbe seanahk 9€</string>
    <string name="matjes_heeringas_r_stpeedikreem_marineeritud_sibul_muld_9">Matjes-heeringas - röstpeedikreem, marineeritud sibul , \'muld\' 9€</string>
    <string name="kanamaks_s_rtsukurk_puuviljaleib_sibulamoos_9">Kanamaks - särtsukurk, puuviljaleib, sibulamoos 9€</string>
    <string name="kuningservik_seenehundist_musta_k_slaugu_kreem_k_rvetatud_kurk_kitsejuustup_rlid_9">Kuningservik Seenehundist - musta küüslaugu kreem, kõrvetatud kurk, kitsejuustupärlid 9€</string>
    <string name="saarema_p_dra_b_ff_rnsoola_p_draliha_m_dar_igas_forellimari_suitsumunakollane_p_drasamblik_12">Saarema põdra böff - õrnsoola põdraliha, mädarõigas, forellimari, suitsumunakollane, põdrasamblik 12€</string>
    <string name="karulaugu_sparglisupp_lillkapsas_s_rtsuspargel_estragoni_li_7">Karulaugu-sparglisupp lillkapsas - särtsuspargel, estragoniõli 7€</string>
    <string name="karamellistatud_lillkapsas_laabijuust_karamellv_i_vadakukaste_12">Karamellistatud lillkapsas - laabijuust, karamellvõi-vadakukaste 12€</string>
    <string name="r_stitud_atlandi_tursk_l_kkekartul_hapukoor_ja_roheline_sibul_suitsuv_ikaste_16">Röstitud Atlandi tursk - lõkkekartul, hapukoor ja roheline sibul, suitsuvõikaste 16€</string>
    <string name="hiidlest_suhkruherned_b_arni_kaste_17">Hiidlest - suhkruherned, Béarni kaste 17€</string>
    <string name="vutt_j_rveotsa_vutifarmist_varajane_porgand_kevadkapsas_porgandikaste_17">Vutt Järveotsa vutifarmist - varajane porgand, kevadkapsas, porgandikaste 17€</string>
    <string name="aurukuklid_teryiaki_siga_v_rtsikas_kimchi_m_dar_igas_13">Aurukuklid - teryiaki-siga, vürtsikas kimchi, mädarõigas 13€</string>
    <string name="antrekoot_laagerdatud_simmentali_t_ugu_veis_luu_dikaste_kuum_pannisalat_20">Antrekoot - laagerdatud Simmentali tõugu veis, luuüdikaste, kuum pannisalat 20€</string>
    <string name="kadakas_kadakane_br_leekreem_gin_tonic_u_geel_purjakil_marjad_6"><![CDATA[Kadakas - kadakane brüleekreem, gin & tonic’u geel, purjakil marjad 6€]]></string>
    <string name="troopika_kookose_panna_cotta_karboniseeritud_ananass_apelsinim_nt_6">Troopika - kookose panna cotta, karboniseeritud ananass, apelsinimünt\t6€</string>
    <string name="shokolaad_okolaad_okolaad_vaarika_t_mianisorbett_7">Shokolaad - šokolaad, šokolaad, vaarika-tüümianisorbett 7€</string>
    <string name="murmanski_pelmeenid_kodused_ja_suitsumakrelli_ning_hapukapsa_t_idisega_10">MURMANSKI PELMEENID – kodused ja suitsumakrelli ning hapukapsa täidisega 10€</string>
    <string name="siberi_pelmeenid_kodused_ja_kolmest_lihast_t_idisega_ning_seenepuljongis_10">SIBERI PELMEENID – kodused ja kolmest lihast täidisega ning seenepuljongis 10€</string>
    <string name="roheline_salat_r_stitud_kobartomatid_mandlid_ja_peedipesto_7">ROHELINE SALAT – röstitud kobartomatid, mandlid ja peedipesto 7€</string>
    <string name="puraviku_kulebjaaka_ahjus_k_psetatud_ja_karamelliseeritud_sibula_majoneesiga_9">PURAVIKU KULEBJAAKA – ahjus küpsetatud ja karamelliseeritud sibula majoneesiga 9€</string>
    <string name="haugikotlet_tilli_aioli_vutimuna_ja_v_rskelt_marineeritud_kurgiga_10">HAUGIKOTLET – tilli-aioli, vutimuna ja värskelt marineeritud kurgiga 10€</string>
    <string name="angerjas_suitsutatud_ja_hautatud_unaveinis_ning_peedi_kasukaga_13">ANGERJAS – suitsutatud ja hautatud õunaveinis ning peedi \'kasukaga\' 13€</string>
    <string name="tatrapliinid_siiamarja_punase_sibula_ja_hapukoorega_12">TATRAPLIINID – siiamarja, punase sibula ja hapukoorega 12€</string>
    <string name="vutt_la_tabaka_bakla_aanisalati_ja_punases_stra_eleega_11">VUTT à la \'TABAKA\' – baklažaanisalati ja punasesõstraželeega 11€</string>
    <string name="a_la_tartar_ad_ika_marineeritud_k_nnuseente_ja_brioche_saiga_10">A LA TARTAR – adžika, marineeritud kännuseente ja brioche saiga 10€</string>
    <string name="bor_veiselihaga_5">BORŠ – veiselihaga 5€</string>
    <string name="uhhaa_erinevate_kaladega_6">UHHAA – erinevate kaladega 6€</string>
    <string name="l_he_mee_sinepiglasuuri_rdipannkoogi_rohelise_herne_ning_munasalatiga_13">LÕHE – mee-sinepiglasuuri, ürdipannkoogi, rohelise herne ning munasalatiga 13€</string>
    <string name="siig_praetud_lehtkapsa_maapirnikreemi_ja_homaariv_iga_17">SIIG – praetud lehtkapsa, maapirnikreemi ja homaarivõiga 17€</string>
    <string name="vege_rukkiburger_kikerherne_kinoa_peedikotleti_ja_tomatimarmelaadiga_10">VEGE RUKKIBURGER – kikerherne-kinoa-peedikotleti ja tomatimarmelaadiga 10€</string>
    <string name="confirm">Confirm</string>
</resources>