<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chedi_main_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pavel.foodel1.chedi.ChediMainCourse"
    android:background="@drawable/wood"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/main_course"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/chediMainCourse"
        android:textSize="20dp"
        android:layout_weight="0.10"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.50">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:text="@string/r_stitud_silver_cod_ampanja_ja_hiina_meega_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:layout_marginTop="10dp"
                android:id="@+id/chediMainCourse1" />

            <CheckBox
                android:text="@string/taiwani_stiilis_koha_sanpei_kastmes_24"
                android:layout_width="match_parent"
                android:textColor="@color/fontColor"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/chediMainCourse2" />

            <CheckBox
                android:text="@string/grillitud_l_he_peakoka_kastmega_16"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:textColor="@color/fontColor"
                android:layout_height="wrap_content"
                android:id="@+id/chediMainCourse3" />

            <CheckBox
                android:text="@string/praetud_sinikrabid_punase_chilli_ja_karrilehtedega_15"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:id="@+id/chediMainCourse4" />

            <CheckBox
                android:text="@string/grillitud_t_iili_mereahven_hiina_meega_32"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:textColor="@color/fontColor"
                android:layout_height="wrap_content"
                android:id="@+id/chediMainCourse5" />

            <CheckBox
                android:text="@string/pi_pa_part_20"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:textColor="@color/fontColor"
                android:layout_height="wrap_content"
                android:id="@+id/chediMainCourse6" />

            <CheckBox
                android:text="@string/veiseliha_stir_fry_musta_pipra_ja_merlot_ga_24"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:id="@+id/chediMainCourse7" />

            <CheckBox
                android:text="@string/mongoolia_stiilis_stir_fry_hirveliha_25"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:id="@+id/chediMainCourse8" />

            <CheckBox
                android:layout_marginTop="5dp"
                android:text="@string/beebibrokoli_stir_fry_hiina_oliividega_13"
                android:layout_width="match_parent"
                android:textColor="@color/fontColor"
                android:layout_height="wrap_content"
                android:id="@+id/chediMainCourse10" />

            <CheckBox
                android:layout_marginTop="5dp"
                android:text="@string/vokitud_t_rgi_oad_kr_bedate_krevettidega_teravas_oakastmes_13"
                android:layout_width="match_parent"
                android:textColor="@color/fontColor"
                android:layout_height="wrap_content"
                android:id="@+id/chediMainCourse11" />

            <CheckBox
                android:layout_marginTop="5dp"
                android:text="@string/lootosjuure_ja_spargli_stir_fry_musta_pipraga_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:id="@+id/chediMainCourse12" />

            <CheckBox
                android:layout_marginTop="5dp"
                android:text="@string/taimetoitlaste_kana_stir_fry_musta_pipraga_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:id="@+id/chediMainCourse13" />



        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.16">

            <Button
                android:text="@string/starters"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMainChediStarters" />
            <Button
                android:text="@string/desserts"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMainChediDesserts" />
            <Button
                android:text="@string/confirm"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMainChediPay" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
