<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_restoran4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pavel.foodel1.moon.Moon"
    android:background="@drawable/wood">
    <TextView
        android:text="@string/main_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:id="@+id/moonMainMenuMainCourse"
        android:textSize="20dp"
        android:clickable="true"
        android:layout_below="@+id/moonMainMenuStarters"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/desserts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:textSize="20dp"
        android:id="@+id/moonMainMenuDesserts"
        android:clickable="true"
        android:layout_below="@+id/moonMainMenuMainCourse"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/starters"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:id="@+id/moonMainMenuStarters"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/moon"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="39dp"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
